# autonomous-executive-email-copilot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  inference.py  leaderboard_stress.csv  main.py  openenv.yaml  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
artifacts/: leaderboard_stress.csv
baseline/: __init__.py  leaderboard.py  run_baseline.py
benchmark/: __init__.py  agents.py  cost_aware.py  credit_report.py  history.py  reporter.py  results_report.py  runner.py  significance.py  stats_util.py
dashboard/: eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  index.css  labels.ts  useDashboardSocket.ts
dashboard/src/components/: ApprovalQueue.tsx  Inbox.test.tsx  Inbox.tsx  Replay.tsx  ScenarioPicker.tsx  Settings.tsx  Team.tsx  Timeline.tsx
dashboard/src/components/ui/: Badge.tsx  Banner.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Field.tsx  StatTile.tsx
dashboard/src/styles/: tokens.css
data/: settings.yaml  tasks.yaml
data/scenarios/: easy_classification.yaml  easy_classification_v2.yaml  hard_full_management.yaml  medium_prioritization.yaml  medium_prioritization_v2.yaml
docs/: ARCHITECTURE.md  BENCHMARK.md  ROADMAP.md  RUNBOOK.md  TECHNICAL_REFERENCE.md  WHITEPAPER.md
env/: __init__.py  api.py  approval.py  config.py  dashboard_api.py  data_loader.py  db.py  environment.py  grader.py  llm_agent.py  llm_policy.py  logging_config.py  models.py  policy.py  repositories.py  scenario_schema.py  security.py  tasks.py  utils.py
env/agents/: __init__.py  base.py  classifier.py  coordinator.py  escalator.py  reflector.py  responder.py
env/connectors/: __init__.py  base.py  config.py  imap_readonly.py  mapping.py
env/eval/: __init__.py  calibration.py
env/learning/: __init__.py  example_extractor.py  prompt_enhancer.py  trajectory_store.py
env/safety/: __init__.py  guardrails.py  metric.py
reports/: __init__.py  generator.py
scripts/: contamination_check.py  regen_golden.py  run_benchmark.py
scripts/loadtest/: README.md  locustfile.py
server/: app.py
telemetry/: __init__.py  alerts.py  docker-compose.observability.yml  grafana_dashboard.json  metrics.py  prometheus.yml
telemetry/grafana/: llm_cost_dashboard.json
tests/: conftest.py  test_ai_smoke.py  test_api_contract.py  test_api_v1.py  test_approval.py  test_benchmark.py  test_config.py  test_connector.py  test_connector_isolation.py  test_contamination.py  test_dashboard.py  test_db_engine.py  test_db_pooling.py  test_env_determinism.py  test_eval_depth.py  test_grader_bounds.py  test_grading_rigor.py  test_hot_reload.py  test_hybrid_fallback.py  test_interruptions_and_leaderboard.py  test_leaderboard_history.py  test_llm_agent.py  test_llm_benchmark.py  test_llm_metrics.py  test_llm_usage_metrics.py  test_logging.py  test_memory_augmented.py  test_multiagent_taskaware.py  test_multitenant.py  test_observability.py  test_packaging.py  test_phase0_wiring.py  test_providers.py  test_reflection.py  test_report_a11y.py  test_reports.py  test_results_report.py  test_safety.py  test_safety_metric.py  test_scenario_schema.py  (+6 more)
tests/fixtures/mail/: sample.eml
tests/harness/: __init__.py  invariants.py  test_data_integrity.py  test_determinism_guard.py  test_golden_snapshots.py  test_invariants_property.py  test_perf_regression.py
tests/harness/snapshots/: baseline_golden.json
