[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-executive-email-copilot"
version = "0.1.0"
description = "OpenEnv-style executive inbox simulation with typed API, graders, and baselines"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pydantic-settings",
  "pyyaml",
  "httpx",
  "scipy",
  "pytest",
  "streamlit",
  "openai",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "baseline", "server"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["dashboard", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
  "E501",  # line length is enforced by the formatter, not the linter
  "B008",  # FastAPI intentionally uses callables (Body(), Depends()) as defaults
]

[tool.ruff.lint.per-file-ignores]
# Tests may import for side effects and define fixtures before imports.
"tests/*" = ["E402", "F811"]

[tool.ruff.format]
quote-style = "double"