[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-executive-email-copilot"
version = "1.0.0"
description = "Deterministic RL-style executive-inbox environment with a typed API, bounded graders, baselines, and a production ops stack"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pydantic-settings",
  "pyyaml",
  "httpx",
  "scipy",
  "sqlalchemy",
  "fpdf2",
  "openai",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "hypothesis",
  "ruff",
  "mypy",
  "bandit",
  "pip-audit",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "baseline", "server", "benchmark", "telemetry", "reports"]

[tool.pytest.ini_options]
markers = [
  "golden: golden-snapshot tests; rebaseline only via scripts/regen_golden.py",
  "network: tests that require real network access; deselected in CI",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["dashboard", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
  "E501",  # line length is enforced by the formatter, not the linter
  "B008",  # FastAPI intentionally uses callables (Body(), Depends()) as defaults
]

[tool.ruff.lint.per-file-ignores]
# Tests may import for side effects and define fixtures before imports.
"tests/*" = ["E402", "F811"]

[tool.ruff.format]
quote-style = "double"