[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-executive-email-copilot"
version = "1.0.0"
description = "Deterministic RL-style executive-inbox environment with a typed API, bounded graders, baselines, and a production ops stack"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
# Pinned to the CI-verified set (kept in sync with requirements.txt). CI installs
# from here (`pip install -e ".[dev]"`), so leaving these unpinned is what let a
# Starlette release silently break the build. starlette is pinned explicitly even
# though it is transitive via fastapi. Bump deliberately and re-run the suite.
dependencies = [
  "fastapi==0.138.0",
  "starlette==1.3.1",
  "uvicorn==0.49.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "pyyaml==6.0.3",
  "httpx==0.28.1",
  "scipy==1.15.3",  # 1.16+ needs py3.11, 1.18 needs py3.12; 1.15.3 supports the 3.10-3.12 matrix
  "sqlalchemy==2.0.51",
  "fpdf2==2.8.7",
  "openai==2.44.0",
]

[project.optional-dependencies]
# Pinned to the CI-verified set so a tooling release (e.g. a new ruff rule)
# can't fail the build without a deliberate bump.
dev = [
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "hypothesis==6.155.7",
  "ruff==0.15.19",
  "mypy==2.1.0",
  "bandit==1.9.4",
  "pip-audit==2.10.1",
]

[project.scripts]
server = "server.app:main"

# Discover every package (including subpackages like env.agents, env.learning,
# env.safety, env.eval, env.connectors) so a built wheel is complete.
[tool.setuptools.packages.find]
include = ["env*", "baseline*", "server*", "benchmark*", "telemetry*", "reports*"]

[tool.pytest.ini_options]
markers = [
  "golden: golden-snapshot tests; rebaseline only via scripts/regen_golden.py",
  "network: tests that require real network access; deselected in CI",
]
filterwarnings = [
  # Starlette 1.3's TestClient warns that httpx will be replaced by httpx2; the
  # current httpx works fine. Silence this one known, harmless deprecation.
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:Warning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["dashboard", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
  "E501",  # line length is enforced by the formatter, not the linter
  "B008",  # FastAPI intentionally uses callables (Body(), Depends()) as defaults
]

[tool.ruff.lint.per-file-ignores]
# Tests may import for side effects and define fixtures before imports.
"tests/*" = ["E402", "F811"]

[tool.ruff.format]
quote-style = "double"